--- a/config.example.json
+++ b/config.example.json
@@ -4,7 +4,7 @@
     "scan_existing": true
   },
   "sls": {
-    "endpoint": "cn-hangzhou.log.aliyuncs.com",
+    "endpoint": "cn-beijing.log.aliyuncs.com",
     "access_key_id": "AKIDxxxxxxxx",
     "access_key_secret": "AKSECRETxxxxxxxx",
     "project": "docker-log-project",
